# django-admin-shellx

./: pyproject.toml  tox.ini
.github/workflows/: ci-cd.yml
django_admin_shellx/: apps.py  consumers.py  views.py
django_admin_shellx_custom_admin/: admin.py
tests/: asgi.py  conftest.py  test_commands.py  test_custom_admin.py  test_views.py  test_websockets.py
