[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-admin-shellx"
version = "0.4.0"
description = "A Django Admin Shell"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["django", "admin", "terminal", "shell", "xterm.js"]
authors = [{ name = "Adin Hodovic", email = "hodovicadin@gmail.com" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "Django>=5.2",
  "channels[daphne]>=4.0.0",
  "django-model-utils>=4",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
  "tox>=4.25.0",
  "coverage>=7.8.0",
  "django-stubs>=5.1.3",
  "mypy>=1.15.0",
  "pylint>=3.3.6",
  "pylint-django>=2.6.1",
  "pytest>=8.3.5",
  "pytest-cov>=6.1.0",
  "pytest-django>=4.11.0",
  "pytest-asyncio>=0.25.0",
  "pytest-mock>=3.11.1",
  "pytest-clarity>=1.0.1",
  "factory-boy>=3.3.0",
  "djlint>=1.36.4",
  "pudb>=2024.1.3",
  "django-extensions>=3.2.3",
  "werkzeug>=3.1.0",
  "ptpython>=3.0.26",
  "django-coverage-plugin>=3.1.1",
]

[project.urls]
Homepage = "https://github.com/adinhodovic/django-admin-shellx"
Documentation = "https://github.com/adinhodovic/django-admin-shellx"
Repository = "https://github.com/adinhodovic/django-admin-shellx"

[tool.hatch.build]
artifacts = [
  "django_admin_shellx/static/django_admin_shellx/output/terminal.css",
  "django_admin_shellx/static/django_admin_shellx/output/terminal.js",
]

[tool.hatch.build.targets.wheel]
packages = ["django_admin_shellx", "django_admin_shellx_custom_admin"]
exclude = [
  "django_admin_shellx/static/django_admin_shellx/css/terminal.css",
  "django_admin_shellx/static/django_admin_shellx/js/terminal.js",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "django_admin_shellx/static/django_admin_shellx/css/terminal.css",
  "django_admin_shellx/static/django_admin_shellx/js/terminal.js",
]

[tool.pytest.ini_options]
addopts = "--ds=tests.settings --reuse-db --pdbcls=pudb.debugger:Debugger"
python_files = "tests.py test_*.py"
norecursedirs = ".git */migrations/* */static/* venv .venv .poetry .virtualenv node_modules"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".venv", "venv", "virtualenv", "migrations", "node_modules", ".tox"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["django_admin_shellx", "django_admin_shellx_custom_admin"]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]
exclude = [".venv", "migrations.*"]

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.pylint.'MASTER']
load-plugins = "pylint_django"
ignore = "manage.py"

[tool.pylint.'FORMAT']
max-line-length = 150

[tool.pylint.'MESSAGES CONTROL']
disable = "missing-docstring,invalid-name,logging-fstring-interpolation,fixme,duplicate-code"

[tool.pylint.'DESIGN']
max-parents = 13

[tool.pylint.'SIMILARITIES']
# Minimum lines number of a similarity.
min-similarity-lines = 4
# Ignore comments when computing similarities.
ignore-comments = "yes"
# Ignore docstrings when computing similarities.
ignore-docstrings = "yes"
# Ignore imports when computing similarities.
ignore-imports = "yes"

[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
preserve_blank_line = true
# TODO: remove T002 when fixed https://github.com/Riverside-Healthcare/djLint/issues/687
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"
